Mike updating encoder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "[python]": {
         "editor.formatOnPaste": true
     },
-    "python.linting.pep8Enabled": true
+    "python.linting.pep8Enabled": true,
+    "python.formatting.provider": "black"
 }
