--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,9 @@
 {
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": false,
+    "python.pythonPath": "/home/mike/miniconda3/bin/python",
+    "python.formatting.provider": "black",
+    "python.linting.pylintEnabled": true,
     "python.linting.pylamaEnabled": false,
+    "python.linting.enabled": true,
     "python.linting.flake8Enabled": false,
-    "python.pythonPath": "/home/mike/miniconda3/envs/linting/bin/python",
-    "editor.formatOnSaveTimeout": 1500,
-
-    "[python]": {
-        "editor.formatOnPaste": true
-    },
-    "python.linting.pep8Enabled": true,
-    "python.formatting.provider": "black"
+    "python.linting.pep8Enabled": false
 }
